@@ -208,8 +208,8 @@
   <p>Again, replace x.y.z with the version of nano you use.</p></blockquote>
 <h2><a name="4.9"></a>4.9. I've compiled nano with color support, but I don't see any color when I run it!</h2>
 <blockquote><p>If you want nano to actually use color, you have to specify the color configurations you want it to use in your .nanorc. Some example configurations are in the <b>nanorc.sample</b> that comes with the nano source or your nano package. See Section <a href="#3.9">3.9</a>.</p></blockquote>
-<h2><a name="4.10"></a>4.10. How do I select text for the clipboard in an X terminal when I'm running nano in one and nano's mouse support is turned on?</h2>
-<blockquote><p>Try holding down the Shift key and selecting the text as you normally would.</p></blockquote>
+<h2><a name="4.10"></a>4.10. How do I select text for or paste text from the clipboard in an X terminal when I'm running nano in one and nano's mouse support is turned on?</h2>
+<blockquote><p>Try holding down the Shift key and selecting or pasting the text as you normally would.</p></blockquote>
 <hr width="100%">
 <h1><a name="5"></a>5. Internationalization</h1>
 <h2><a name="5.1"></a>5.1. There's no translation for my language!</h2>
@@ -250,6 +250,7 @@
 <h2><a name="8"></a>8. ChangeLog</h2>
 <blockquote>
 <p>
+2005/07/04 - Update section 4.10 to mention that pasting from the X clipboard via the middle mouse button also works when the Shift key is used.<br>
 2005/06/15 - Update description of --enable-extra, and add missing line breaks. (DLR)<br>
 2005/06/13 - Minor capitalization and wording fixes. (DLR)<br>
 2005/06/08 - Updated section 1.1 to mention the current maintainer. (DLR)<br>
